# python-project-49

./: .gitignore  README.md  pyproject.toml
brain_games/: game_engine.py
brain_games/games/: calc.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  game_utils.py  utils.py
